Media Controls: Interaction region on visionOS <audio> volume button is too big https://bugs.webkit.org/show_bug.cgi?id=258772 rdar://110499146
Reviewed by Tim Horton.

The existing padding and margins of the media control bar buttons were designed for button and bar
sizes of the <video> element, which are larger than those of the <audio> element. This caused the
interaction regions of all the audio control bar buttons to be larger than they should.

Fix by reducing the padding to compensate and match the ratio of the <video> buttons' padding, and
adjust the margins to maintain concentricity with the controls bar.

* Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css:
(.media-controls.vision.audio > .bottom.controls-bar,):
(.media-controls.vision.audio > .bottom.controls-bar button):
(.media-controls.vision.audio > .bottom.controls-bar button.mute):
(.media-controls.vision.audio > .bottom.controls-bar .buttons-container.left):
(.media-controls.vision.audio > .bottom.controls-bar .buttons-container.right):

Canonical link: https://commits.webkit.org/265739@main

--- a/Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css
+++ b/Source/WebCore/Modules/modern-media-controls/controls/vision-media-controls.css
@@ -246,7 +246,7 @@
 
 .media-controls.vision.audio > .bottom.controls-bar,
 .media-controls.vision.audio > .bottom.controls-bar * {
-    --inline-controls-bar-height: 31px;
+    --inline-controls-bar-height: 32px;
 }
 
 .media-controls.vision > .bottom.controls-bar {
@@ -258,6 +258,28 @@
     padding: 10px;
     box-sizing: content-box;
     transform: translateX(-10px);
+}
+
+/* Adjust the padding and margins of the audio buttons to account for their smaller sizes */
+
+.media-controls.vision.audio > .bottom.controls-bar button {
+    border-radius: 50%;
+    padding: 6px;
+    box-sizing: content-box;
+    transform: translateX(-6px);
+}
+
+.media-controls.vision.audio > .bottom.controls-bar button.mute {
+    padding: 3px;
+    transform: translateX(-3px);
+}
+
+.media-controls.vision.audio > .bottom.controls-bar .buttons-container.left {
+    margin-left: -1px;
+}
+
+.media-controls.vision.audio > .bottom.controls-bar .buttons-container.right {
+    margin-left: 6px;
 }
 
 .media-controls.vision > .controls-bar > .background-tint,
